[tool.poetry]
name = "gcp-bucket-for-sso"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
google-cloud-storage = "^1.43.0"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
